fix firebase auth
